# colher_de_pau

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
chef_colher_de_pau/: asgi.py  settings.py  wsgi.py
pessoas/: admin.py  models.py
pessoas/migrations/: 0001_initial.py
receitas/: admin.py  models.py  urls.py  views.py
receitas/migrations/: 0001_initial.py  0002_receita_pessoa.py  0003_receita_publicada.py  0004_receita_foto_receita.py
receitas/templates/: base.html  buscar.html  index.html  receita.html
receitas/templates/partials/: _busca.html  _footer.html  _menu.html  busca.html  menu.html
