[tool.poetry]
name = "colher_de_pau"
version = "0.1.0"
description = ""
authors = ["Pedro Henrique Fernandes <pedrohcf3.14@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
psycopg2-binary = "^2.8.6"
psycopg2 = "^2.8.6"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
